fix issue with overflowing top nav bar

--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,6 +1,6 @@
 .preloaderContainer {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-color: black;
   z-index: 999;
 }
