--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,5 +1,5 @@
 .navbar {
-  width: 100vw;
+  width: 100%;
   height: 7vh;
   background: rgba(0, 0, 0, 0.1);
   position: absolute;
@@ -31,7 +31,7 @@
 @media screen and (max-width: 490px) {
   .navbar {
     height: 7vh;
-
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
