--- a/src/components/NavBar/SearchBar.module.css
+++ b/src/components/NavBar/SearchBar.module.css
@@ -3,7 +3,11 @@
   text-align: center;
   height: 10%;
   width: 20%;
-  transform: translate(195%, 25%);
+  transform: translate(-5%, 25%);
+  float: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .searchbar input {
@@ -30,16 +34,17 @@
 
 @media screen and (max-width: 490px) {
   .searchbar {
-    transform: translate(10%, 25%);
+    transform: translate(0, 70%);
     float: right;
-    width: 58%;
-    height: 7vh;
+    width: 50%;
+    height: 100%;
+    position: relative;
+    margin: auto;
   }
 
   .searchbar input {
     height: 3vh;
-    width: 70%;
-    transform: translateY(5%);
+    width: 80%;
   }
 
   .searchbar button {
