--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   min-height: 100%;
-  width: 99vw;
+  width: 100%;
   padding: 0;
   margin: 0;
   overflow-y: scroll;
